; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/net/bna/extr_bfa_ioc.c_bfa_ioc_enable_reply.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/net/bna/extr_bfa_ioc.c_bfa_ioc_enable_reply.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.bfa_ioc = type { i32, i32, i32, %struct.bfa_iocpf }
%struct.bfa_iocpf = type { i32 }

@IOCPF_E_FWRSP_ENABLE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.bfa_ioc*, i32, i32)* @bfa_ioc_enable_reply to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @bfa_ioc_enable_reply(%struct.bfa_ioc* %0, i32 %1, i32 %2) #0 {
  %4 = alloca %struct.bfa_ioc*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca %struct.bfa_iocpf*, align 8
  store %struct.bfa_ioc* %0, %struct.bfa_ioc** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %8 = load %struct.bfa_ioc*, %struct.bfa_ioc** %4, align 8
  %9 = getelementptr inbounds %struct.bfa_ioc, %struct.bfa_ioc* %8, i32 0, i32 3
  store %struct.bfa_iocpf* %9, %struct.bfa_iocpf** %7, align 8
  %10 = load i32, i32* %5, align 4
  %11 = load %struct.bfa_ioc*, %struct.bfa_ioc** %4, align 8
  %12 = getelementptr inbounds %struct.bfa_ioc, %struct.bfa_ioc* %11, i32 0, i32 1
  store i32 %10, i32* %12, align 4
  %13 = load %struct.bfa_ioc*, %struct.bfa_ioc** %4, align 8
  %14 = getelementptr inbounds %struct.bfa_ioc, %struct.bfa_ioc* %13, i32 0, i32 0
  store i32 %10, i32* %14, align 4
  %15 = load i32, i32* %6, align 4
  %16 = load %struct.bfa_ioc*, %struct.bfa_ioc** %4, align 8
  %17 = getelementptr inbounds %struct.bfa_ioc, %struct.bfa_ioc* %16, i32 0, i32 2
  store i32 %15, i32* %17, align 4
  %18 = load %struct.bfa_iocpf*, %struct.bfa_iocpf** %7, align 8
  %19 = load i32, i32* @IOCPF_E_FWRSP_ENABLE, align 4
  %20 = call i32 @bfa_fsm_send_event(%struct.bfa_iocpf* %18, i32 %19)
  ret void
}

declare dso_local i32 @bfa_fsm_send_event(%struct.bfa_iocpf*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
